# fractal

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  fractal.doap  meson.build  meson_options.txt
.beautifier/: global.ini
fractal-gtk/: Cargo.toml  build.rs
fractal-gtk/po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  hr.po  hu.po  id.po  it.po  kk.po  meson.build  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
fractal-gtk/res/: app.css  meson.build  org.gnome.Fractal.appdata.xml  org.gnome.Fractal.appdata.xml.in  org.gnome.Fractal.appdata.xml.in.in  org.gnome.Fractal.desktop.in.in  org.gnome.Fractal.gschema.xml  org.gnome.Fractal.metainfo.xml.in.in  resources.xml
fractal-gtk/res/gtk/: help-overlay.ui  menus.ui
fractal-gtk/res/icons/: meson.build  render-icon.py
fractal-gtk/res/ui/: account_settings.ui  add_room_menu.ui  audio_player.ui  autocomplete.ui  direct_chat.ui  filechooser.ui  invite.ui  invite_user.ui  join_room.ui  kicked_room.ui  leave_room.ui  login_flow.ui  main_menu.ui  main_window.ui  markdown_popover.ui  media_viewer.ui  media_viewer_menu.ui  members.ui  message_menu.ui  msg_src_window.ui  new_room.ui  password_dialog.ui  room_menu.ui  room_settings.ui  scroll_widget.ui  server_chooser_menu.ui  source_dialog.ui  user_menu.ui
fractal-gtk/src/: cache.rs  client.rs  config.rs.in  error.rs  globals.rs  i18n.rs  main.rs  meson.build  passwd.rs  static_resources.rs.in  uibuilder.rs  uitypes.rs  util.rs
fractal-gtk/src/actions/: account_settings.rs  global.rs  login.rs  message.rs  mod.rs  room_history.rs  room_settings.rs
fractal-gtk/src/api/: mod.rs  r0.rs
fractal-gtk/src/api/identity/: association.rs
fractal-gtk/src/api/identity/association/: msisdn.rs
fractal-gtk/src/api/r0/: account.rs  server.rs
fractal-gtk/src/app/: actions.rs  appop_loop.rs  backend_loop.rs  mod.rs  windowstate.rs
fractal-gtk/src/app/connect/: account.rs  attach.rs  autocomplete.rs  column.rs  direct.rs  directory.rs  headerbar.rs  invite.rs  join_room.rs  language.rs  leaflet.rs  leave_room.rs  load_more.rs  login.rs  markdown.rs  media_viewer.rs  message_menu.rs  mod.rs  new_room.rs  room_config.rs  roomlist_search.rs  scroll.rs  search.rs  send.rs  spellcheck.rs  stickers.rs  swipeable_widgets.rs
fractal-gtk/src/appop/: about.rs  account.rs  attach.rs  directory.rs  files.rs  invite.rs  leaflet.rs  login.rs  media_viewer.rs  member.rs  message.rs  mod.rs  notifications.rs  notify.rs  room.rs  room_settings.rs  start_chat.rs  state.rs  stickers.rs  sync.rs  user.rs
fractal-gtk/src/appop/connect/: account.rs  autocomplete.rs  direct.rs  directory.rs  headerbar.rs  invite.rs  join_room.rs  language.rs  leave_room.rs  markdown.rs  mod.rs  new_room.rs  roomlist_search.rs  send.rs  swipeable_widgets.rs
fractal-gtk/src/backend/: directory.rs  media.rs  mod.rs  register.rs  room.rs  sync.rs  user.rs
fractal-gtk/src/cache/: mod.rs  state.rs
fractal-gtk/src/model/: event.rs  fileinfo.rs  member.rs  message.rs  message_list.rs  mod.rs  room.rs
fractal-gtk/src/ui/: about.rs  account.rs  attach.rs  directory.rs  invite.rs  media_viewer.rs  member.rs  mod.rs  notify.rs  room_settings.rs  start_chat.rs  state.rs  user.rs
fractal-gtk/src/ui/connect/: account.rs  direct.rs  invite.rs  language.rs  mod.rs  send.rs
fractal-gtk/src/util/: i18n.rs  mod.rs
fractal-gtk/src/widgets/: address.rs  autocomplete.rs  avatar.rs  clip_container.rs  divider.rs  error_dialog.rs  file_dialog.rs  image.rs  inline_player.rs  kicked_dialog.rs  login.rs  media_viewer.rs  member.rs  members_list.rs  message.rs  message_menu.rs  mod.rs  room.rs  room_history.rs  room_settings.rs  roomlist.rs  roomrow.rs  scroll_widget.rs  source_dialog.rs  sourceview_entry.rs
fractal-matrix-api/: Cargo.toml
fractal-matrix-api/src/: cache.rs  client.rs  de.rs  error.rs  globals.rs  lib.rs  meson.build  r0.rs  ser.rs  serde.rs  types.rs  util.rs
fractal-matrix-api/src/backend/: directory.rs  media.rs  mod.rs  register.rs  room.rs  stickers.rs  sync.rs  types.rs  user.rs
fractal-matrix-api/src/model/: event.rs  fileinfo.rs  filter.rs  member.rs  message.rs  mod.rs  protocol.rs  register.rs  room.rs  stickers.rs  sync.rs  user.rs  userinfo.rs
fractal-matrix-api/src/r0/: account.rs  config.rs  contact.rs  context.rs  directory.rs  filter.rs  media.rs  membership.rs  message.rs  profile.rs  pushrules.rs  read_marker.rs  redact.rs  room.rs  state.rs  sync.rs  tag.rs  thirdparty.rs  typing.rs
fractal-matrix-api/src/r0/account/: change_password.rs  deactivate.rs  login.rs  logout.rs  register.rs
fractal-matrix-api/src/r0/config/: get_global_account_data.rs  set_global_account_data.rs  set_room_account_data.rs
fractal-matrix-api/src/r0/contact/: create.rs  delete.rs  get_identifiers.rs  request_verification_token_email.rs  request_verification_token_msisdn.rs
fractal-matrix-api/src/r0/context/: get_context.rs
fractal-matrix-api/src/r0/directory/: post_public_rooms.rs
fractal-matrix-api/src/r0/media/: create.rs  create_content.rs  get_content.rs  get_content_thumbnail.rs
fractal-matrix-api/src/r0/membership/: invite_user.rs  join_room_by_id_or_alias.rs  leave_room.rs
fractal-matrix-api/src/r0/message/: create_message_event.rs  get_message_events.rs
fractal-matrix-api/src/r0/profile/: get_display_name.rs  get_profile.rs  set_avatar_url.rs  set_display_name.rs
fractal-matrix-api/src/r0/pushrules/: delete_room_rules.rs  get_room_rules.rs  set_room_rules.rs
fractal-matrix-api/src/r0/read_marker/: set_read_marker.rs
fractal-matrix-api/src/r0/redact/: redact_event.rs
fractal-matrix-api/src/r0/room/: create_room.rs
fractal-matrix-api/src/r0/search/: user.rs
fractal-matrix-api/src/r0/server/: domain_info.rs
fractal-matrix-api/src/r0/state/: create_state_events_for_key.rs  get_state_events_for_key.rs
fractal-matrix-api/src/r0/sync/: get_joined_members.rs  sync_events.rs
fractal-matrix-api/src/r0/tag/: create_tag.rs  delete_tag.rs
(+56 files in other folders)
