[package]
name = "fractal"
version = "0.1.0"
authors = ["Daniel García Moreno <danigm@wadobo.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
# We need to use the same version as libadwaita does
#rev = "abea0c9980bc083494eceb30dfab5eeb99a73118"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs.git"
