[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-gtk"
version = "4.2.2"
workspace = "../"
edition = "2018"

[dependencies]
clap = "2.32.0"
comrak = "0.4.0"
dirs = "1.0.4"
failure = "0.1.3"
fragile = "0.3.0"
gspell = "0.3.0"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
gdk-pixbuf-sys = "0.9.0"
gstreamer-editing-services = "0.14.0"
gstreamer-pbutils = "0.14.0"
glib = "0.8.0"
html2pango = "0.3.1"
itertools = "0.8.0"
lazy_static = "1.2.0"
letter-avatar = "1.2.0"
log = "0.4.6"
loggerv = "0.7.1"
mdl = "1.0.4"
pango = "0.7.0"
pangocairo = "0.8.0"
rand = "0.6.1"
regex = "1.1.0"
secret-service = "1.0.0"
serde_json = "1.0.33"
sourceview4 = "0.1.0"
url = "1.7.2"

[dependencies.gst]
version = "0.14.0"
package = "gstreamer"

[dependencies.gst_player]
version = "0.14.0"
package = "gstreamer-player"

[dependencies.cairo-rs]
version = "0.7.0"
features = ["png"]

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dependencies.fractal_api]
path = "../fractal-matrix-api"
package = "fractal-matrix-api"

[dependencies.libhandy]
version = "0.4.0"
features = ["v0_0_10"]

[dependencies.gettext-rs]
git = "https://github.com/danigm/gettext-rs"
branch = "no-gettext"
features = ["gettext-system"]

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.serde]
version = "1.0.82"
features = ["derive"]

[dependencies.gio]
version = "0.7.0"
features = ["v2_56"]
