[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-gtk"
version = "4.2.2"
workspace = "../"
edition = "2018"

[dependencies]
clap = "2.33.0"
comrak = "0.7.0"
dirs = "2.0.2"
failure = "0.1.6"
fragile = "1.0.0"
gspell = "0.4.0"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
gdk-pixbuf-sys = "0.9.1"
gstreamer-editing-services = "0.15.0"
gstreamer-pbutils = "0.15.1"
glib = "0.9.3"
html2pango = "0.3.2"
itertools = "0.8.2"
lazy_static = "1.4.0"
letter-avatar = "1.2.1"
log = "0.4.8"
loggerv = "0.7.2"
mdl = "1.0.4"
pango = "0.8.0"
pangocairo = "0.9.0"
rand = "0.7.3"
regex = "1.3.4"
secret-service = "1.0.0"
serde_json = "1.0.48"
# sourceview4 = "0.1.1"

[dependencies.sourceview4]
git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs.git"
rev = "fa8819fa7ecbe56f44d951656d3825f468915754"

[dependencies.ruma-identifiers]
version = "0.16"
features = ["rand"]

[dependencies.gst]
version = "0.15.3"
package = "gstreamer"

[dependencies.gst_player]
version = "0.15.3"
package = "gstreamer-player"

[dependencies.cairo-rs]
version = "0.8.1"
features = ["png"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.fractal_api]
path = "../fractal-matrix-api"
package = "fractal-matrix-api"

[dependencies.libhandy]
version = "0.5.0"
features = ["v0_0_10"]

[dependencies.gettext-rs]
git = "https://github.com/danigm/gettext-rs"
branch = "no-gettext"
features = ["gettext-system"]

[dependencies.gtk]
version = "0.8.1"
features = ["v3_22"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_56"]
