[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-gtk"
version = "4.4.0"
workspace = "../"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.0"
comrak = "0.7.0"
directories = "2.0.2"
dirs = "2.0.2"
fragile = "1.0.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
gstreamer-pbutils = "0.16.0"
glib = "0.10.1"
html2pango = "0.3.2"
itertools = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.8"
loggerv = "0.7.2"
md5 = "0.7.0"
mdl = "1.0.5"
pango = "0.9.0"
rand = "0.7.3"
regex = "1.3.4"
secret-service = "1.0.0"
serde_json = "1.0.48"
sourceview4 = "0.2.0"
gspell = "0.5.0"
gtk-sys = "0.10.0"

[dependencies.gst]
version = "0.16.1"
package = "gstreamer"

[dependencies.gst_player]
version = "0.16.0"
package = "gstreamer-player"

[dependencies.cairo-rs]
version = "0.9.1"
features = ["png"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.fractal_api]
path = "../fractal-matrix-api"
package = "fractal-matrix-api"

[dependencies.libhandy]
version = "0.7.1"

[dependencies.gettext-rs]
git = "https://github.com/danigm/gettext-rs"
branch = "no-gettext"
features = ["gettext-system"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_56"]

[dependencies.either]
git = "https://github.com/danigm/either.git"
rev = "60c99bc0723491e2dfd42bbe9b485c5f9323e96b"
features = ["serde_untagged"]

[dependencies.tokio]
version = "0.2.22"
features = ["rt-threaded"]
