[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-matrix-api"
version = "4.2.2"
workspace = "../"
edition = "2018"

description = """
Library to communicate with a Matrix.org server
"""
keywords = [
    "matrix", "fractal"
]
license = "GPL-3.0"
repository = "https://gitlab.gnome.org/GNOME/fractal"
documentation = "https://gnome.pages.gitlab.gnome.org/fractal/fractal_matrix_api/index.html"

[dependencies]
directories = "2.0.2"
lazy_static = "1.4.0"
log = "0.4.8"
md5 = "0.7.0"
regex = "1.3.4"
ruma-identifiers = "0.16"
serde_json = "1.0.48"
time = "0.2.7"
urlencoding = "1.0.0"
gio = "0.8.1"
percent-encoding = "2.1.0"
glib = "0.9.3"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.3"
features = ["blocking", "json", "gzip", "socks"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]
