[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-matrix-api"
version = "4.2.2"
workspace = "../"
edition = "2018"

description = """
Library to communicate with a Matrix.org server
"""
keywords = [
    "matrix", "fractal"
]
license = "GPL-3.0"
repository = "https://gitlab.gnome.org/GNOME/fractal"
documentation = "https://gnome.pages.gitlab.gnome.org/fractal/fractal_matrix_api/index.html"

[dependencies]
serde_json = "1.0.48"
gio = "0.8.1"

[dependencies.ruma-identifiers]
version = "0.16"
features = ["rand"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.3"
features = ["blocking", "json", "gzip", "socks"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]
