global_conf = configuration_data()
global_conf.set_quoted('APP_ID', application_id)
global_conf.set_quoted('VERSION', fractal_version + version_suffix)
global_conf.set_quoted('LOCALEDIR', fractal_localedir)
global_conf.set_quoted('PKGDATADIR', fractal_pkgdatadir)
global_conf.set_quoted('NAME_SUFFIX', name_suffix)
config_rs = configure_file(
  input: 'config.rs.in',
  output: 'config.rs',
  configuration: global_conf
)

run_command(
  'cp',
  config_rs,
  meson.current_source_dir(),
  check: true
)

run_target(
  'doc',
  command: [
    doc_script,
    '@SOURCE_ROOT@',
    '@OUTPUT@',
    meson.build_root(),
    profile
  ],
  depends: fractal_resources
)

# Keep in alphabetical order
app_sources = files(
  'actions/account_settings.rs',
  'actions/global.rs',
  'actions/login.rs',
  'actions/message.rs',
  'actions/mod.rs',
  'actions/room_settings.rs',
  'api/identity/association/msisdn/submit_token.rs',
  'api/identity/association/msisdn.rs',
  'api/identity/association.rs',
  'api/r0/account/deactivate.rs',
  'api/r0/account/login.rs',
  'api/r0/account/logout.rs',
  'api/r0/contact/create.rs',
  'api/r0/contact/delete.rs',
  'api/r0/server/domain_info.rs',
  'api/r0/account.rs',
  'api/r0/contact.rs',
  'api/r0/server.rs',
  'api/identity.rs',
  'api/mod.rs',
  'api/r0.rs',
  'app/mod.rs',
  'app/windowstate.rs',
  'appop/connect/account.rs',
  'appop/connect/autocomplete.rs',
  'appop/connect/directory.rs',
  'appop/connect/direct.rs',
  'appop/connect/headerbar.rs',
  'appop/connect/invite.rs',
  'appop/connect/join_room.rs',
  'appop/connect/language.rs',
  'appop/connect/leave_room.rs',
  'appop/connect/markdown.rs',
  'appop/connect/mod.rs',
  'appop/connect/new_room.rs',
  'appop/connect/roomlist_search.rs',
  'appop/connect/send.rs',
  'appop/connect/swipeable_widgets.rs',
  'appop/about.rs',
  'appop/account.rs',
  'appop/attach.rs',
  'appop/directory.rs',
  'appop/invite.rs',
  'appop/login.rs',
  'appop/media_viewer.rs',
  'appop/member.rs',
  'appop/message.rs',
  'appop/mod.rs',
  'appop/notifications.rs',
  'appop/notify.rs',
  'appop/room.rs',
  'appop/room_settings.rs',
  'appop/start_chat.rs',
  'appop/state.rs',
  'appop/sync.rs',
  'appop/user.rs',
  'backend/directory.rs',
  'backend/media.rs',
  'backend/mod.rs',
  'backend/register.rs',
  'backend/room.rs',
  'backend/sync.rs',
  'backend/user.rs',
  'cache/mod.rs',
  'cache/state.rs',
  'model/fileinfo.rs',
  'model/member.rs',
  'model/message.rs',
  'model/mod.rs',
  'model/room.rs',
  'util/i18n.rs',
  'util/mod.rs',
  'widgets/address.rs',
  'widgets/autocomplete.rs',
  'widgets/avatar.rs',
  'widgets/clip_container.rs',
  'widgets/divider.rs',
  'widgets/error_dialog.rs',
  'widgets/file_dialog.rs',
  'widgets/image.rs',
  'widgets/inline_player.rs',
  'widgets/kicked_dialog.rs',
  'widgets/login.rs',
  'widgets/media_viewer.rs',
  'widgets/member.rs',
  'widgets/members_list.rs',
  'widgets/message_menu.rs',
  'widgets/message.rs',
  'widgets/mod.rs',
  'widgets/room_history.rs',
  'widgets/roomlist.rs',
  'widgets/roomrow.rs',
  'widgets/room.rs',
  'widgets/room_settings.rs',
  'widgets/scroll_widget.rs',
  'widgets/source_dialog.rs',
  'widgets/sourceview_entry.rs',
  'client.rs',
  'config.rs',
  'config.rs.in',
  'error.rs',
  'globals.rs',
  'main.rs',
  'passwd.rs',
  'uibuilder.rs',
  'uitypes.rs'
)

cargo_release = custom_target('cargo-build',
                        build_by_default: true,
                        input: [
                          cargo_manifests,
                          app_sources,
                        ],
                        depends: fractal_resources,
                        output: ['fractal'],
                        install: true,
                        install_dir: fractal_bindir,
                        console: true,
                        command: [cargo_script,
                                  '@SOURCE_ROOT@',
                                  '@OUTPUT@',
                                  meson.build_root(),
                                  profile
                                 ])

