global_conf = configuration_data()
global_conf.set_quoted('APP_ID', application_id)
global_conf.set_quoted('VERSION', fractal_version + version_suffix)
global_conf.set_quoted('LOCALEDIR', fractal_localedir)
global_conf.set_quoted('PKGDATADIR', fractal_pkgdatadir)
global_conf.set_quoted('NAME_SUFFIX', name_suffix)
config_rs = configure_file(
  input: 'config.rs.in',
  output: 'config.rs',
  configuration: global_conf
)

run_command(
  'cp',
  config_rs,
  meson.current_source_dir(),
  check: true
)

run_target(
  'doc',
  command: [
    doc_script,
    '@SOURCE_ROOT@',
    '@OUTPUT@',
    meson.build_root(),
    profile
  ],
  depends: fractal_resources
)

# Keep in alphabetical order
app_sources = files(
  'actions/account_settings.rs',
  'actions/global.rs',
  'actions/login.rs',
  'actions/message.rs',
  'actions/mod.rs',
  'actions/room_settings.rs',
  'api/identity/association/msisdn/submit_token.rs',
  'api/identity/association/msisdn.rs',
  'api/identity/association.rs',
  'api/r0/account/deactivate.rs',
  'api/r0/account/login.rs',
  'api/r0/account/logout.rs',
  'api/r0/contact/create.rs',
  'api/r0/contact/delete.rs',
  'api/r0/server/domain_info.rs',
  'api/r0/account.rs',
  'api/r0/contact.rs',
  'api/r0/server.rs',
  'api/identity.rs',
  'api/mod.rs',
  'api/r0.rs',
  'app/mod.rs',
  'app/windowstate.rs',
  'appop/account.rs',
  'appop/directory.rs',
  'appop/invite.rs',
  'appop/login.rs',
  'appop/media_viewer.rs',
  'appop/member.rs',
  'appop/message.rs',
  'appop/mod.rs',
  'appop/notifications.rs',
  'appop/notify.rs',
  'appop/room.rs',
  'appop/room_settings.rs',
  'appop/start_chat.rs',
  'appop/state.rs',
  'appop/sync.rs',
  'appop/user.rs',
  'backend/directory.rs',
  'backend/media.rs',
  'backend/mod.rs',
  'backend/register.rs',
  'backend/room.rs',
  'backend/sync.rs',
  'backend/user.rs',
  'cache/mod.rs',
  'cache/state.rs',
  'model/fileinfo.rs',
  'model/member.rs',
  'model/message.rs',
  'model/mod.rs',
  'model/room.rs',
  'ui/connect/account.rs',
  'ui/connect/autocomplete.rs',
  'ui/connect/directory.rs',
  'ui/connect/direct.rs',
  'ui/connect/headerbar.rs',
  'ui/connect/invite.rs',
  'ui/connect/join_room.rs',
  'ui/connect/language.rs',
  'ui/connect/leave_room.rs',
  'ui/connect/markdown.rs',
  'ui/connect/mod.rs',
  'ui/connect/new_room.rs',
  'ui/connect/roomlist_search.rs',
  'ui/connect/send.rs',
  'ui/connect/swipeable_widgets.rs',
  'ui/about.rs',
  'ui/attach.rs',
  'ui/directory.rs',
  'ui/invite.rs',
  'ui/member.rs',
  'ui/mod.rs',
  'ui/notify.rs',
  'ui/room_settings.rs',
  'ui/start_chat.rs',
  'ui/user.rs',
  'util/i18n.rs',
  'util/mod.rs',
  'widgets/address.rs',
  'widgets/autocomplete.rs',
  'widgets/avatar.rs',
  'widgets/clip_container.rs',
  'widgets/divider.rs',
  'widgets/error_dialog.rs',
  'widgets/file_dialog.rs',
  'widgets/image.rs',
  'widgets/inline_player.rs',
  'widgets/kicked_dialog.rs',
  'widgets/login.rs',
  'widgets/media_viewer.rs',
  'widgets/members_list.rs',
  'widgets/message_menu.rs',
  'widgets/message.rs',
  'widgets/mod.rs',
  'widgets/room_history.rs',
  'widgets/roomlist.rs',
  'widgets/roomrow.rs',
  'widgets/scroll_widget.rs',
  'widgets/source_dialog.rs',
  'widgets/sourceview_entry.rs',
  'client.rs',
  'config.rs',
  'config.rs.in',
  'error.rs',
  'globals.rs',
  'main.rs',
  'passwd.rs'
)

cargo_release = custom_target('cargo-build',
                        build_by_default: true,
                        input: [
                          cargo_manifests,
                          app_sources,
                        ],
                        depends: fractal_resources,
                        output: ['fractal'],
                        install: true,
                        install_dir: fractal_bindir,
                        console: true,
                        command: [cargo_script,
                                  '@SOURCE_ROOT@',
                                  '@OUTPUT@',
                                  meson.build_root(),
                                  profile
                                 ])

