api_sources = files(
  'identity/r0/association/msisdn/submit_token.rs',
  'identity/r0/association/msisdn.rs',
  'identity/r0/association.rs',
  'identity/r0.rs',
  'r0/account/change_password.rs',
  'r0/account/deactivate.rs',
  'r0/account/login.rs',
  'r0/account/logout.rs',
  'r0/account/register.rs',
  'r0/contact/create.rs',
  'r0/contact/delete.rs',
  'r0/contact/get_identifiers.rs',
  'r0/contact/request_verification_token_email.rs',
  'r0/contact/request_verification_token_msisdn.rs',
  'r0/media/create_content.rs',
  'r0/profile/get_display_name.rs',
  'r0/profile/get_profile.rs',
  'r0/profile/set_avatar_url.rs',
  'r0/profile/set_display_name.rs',
  'r0/server/domain_info.rs',
  'r0/state/create_state_events_for_key.rs',
  'r0/state/get_state_events_for_key.rs',
  'r0/sync/get_joined_members.rs',
  'r0/sync/sync_events.rs',
  'r0/tag/create_tag.rs',
  'r0/tag/delete_tag.rs',
  'r0/thirdparty/get_supported_protocols.rs',
  'r0/account.rs',
  'r0/contact.rs',
  'r0/filter.rs',
  'r0/media.rs',
  'r0/profile.rs',
  'r0/server.rs',
  'r0/state.rs',
  'r0/sync.rs',
  'r0/tag.rs',
  'r0/thirdparty.rs',
  'identity.rs',
  'lib.rs',
  'r0.rs',
)
