api_sources = files(
  'identity/r0/association/msisdn/submit_token.rs',
  'identity/r0/association/msisdn.rs',
  'identity/r0/association.rs',
  'identity/r0.rs',
  'r0/account/deactivate.rs',
  'r0/account/login.rs',
  'r0/account/logout.rs',
  'r0/contact/create.rs',
  'r0/contact/delete.rs',
  'r0/contact/request_verification_token_msisdn.rs',
  'r0/server/domain_info.rs',
  'r0/sync/sync_events.rs',
  'r0/account.rs',
  'r0/contact.rs',
  'r0/filter.rs',
  'r0/server.rs',
  'r0/sync.rs',
  'identity.rs',
  'lib.rs',
  'r0.rs',
)
